# gomokuAI

./: README.md
Gomoku/: Gomoku.sln  Gomoku.vcxproj  Gomoku.vcxproj.filters  gomoku.cpp  gomoku.h  threat_table.txt
Gomoku/Debug/: Gomoku.exe.recipe  Gomoku.ilk  Gomoku.vcxproj.FileListAbsolute.txt  gomoku.obj.enc  vc142.idb
Gomoku/Debug/Gomoku.tlog/: CL.command.1.tlog  CL.write.1.tlog  Gomoku.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Gomoku/Release/: Gomoku.exe.recipe  Gomoku.iobj  Gomoku.ipdb  Gomoku.vcxproj.FileListAbsolute.txt
Gomoku/Release/Gomoku.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Gomoku.lastbuildstate  Gomoku.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Gomoku/x64/Debug/: Gomoku.exe.recipe  Gomoku.ilk  Gomoku.vcxproj.FileListAbsolute.txt  vc142.idb
Gomoku/x64/Debug/Gomoku.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Gomoku.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Gomoku/x64/Release/: Gomoku.exe.recipe  Gomoku.iobj  Gomoku.ipdb  Gomoku.vcxproj.FileListAbsolute.txt
Gomoku/x64/Release/Gomoku.tlog/: CL.command.1.tlog  CL.write.1.tlog  Gomoku.lastbuildstate  Gomoku.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
source/: CMakeLists.txt  gomoku.cpp  gomoku.h
